--- a/index.html
+++ b/index.html
@@ -769,6 +769,8 @@ document.getElementById("email-container").innerHTML = '<a href="mailto:arafatpe
                     <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn Icon" class="contact-icon">
                     <p>LinkedIn: <a href="https://www.linkedin.com/in/arafat-ali-mondal-970259264/" target="_blank">LinkedIn Profile</a></p>
                 </div>
+                 <p> ResearchGate: <a href="https://www.researchgate.net/profile/Arafat-Mondal?ev=prf_overview/" target="_blank"> ResearchGate Profile</a></p>
+                </div>
 
                 <!-- Location Section with Google Map -->
                 <div class="contact-item">
